<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
  <data>
    <variable name="country" type="com.awessome.learnmore.models.Country"/>
  </data>

  <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginRight="8dp">

      <android.support.constraint.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginBottom="8dp"
          android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/country_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/country_detail__country_name_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/country_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@{country.name}"
            app:layout_constraintBaseline_toBaselineOf="@+id/country_name_label"
            app:layout_constraintLeft_toLeftOf="@+id/guideline2"
            tools:text="France"/>

        <TextView
            android:id="@+id/code_pays_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/country_detail__country_code_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country_name_label"/>

        <TextView
            android:id="@+id/code_pays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@{country.alpha2Code}"
            app:layout_constraintBaseline_toBaselineOf="@+id/code_pays_label"
            app:layout_constraintLeft_toLeftOf="@+id/guideline2"
            tools:text="Fr"/>

        <TextView
            android:id="@+id/code_appel_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:text="@string/code_appel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/code_pays_label"/>

        <TextView
            android:id="@+id/code_appel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@{country.callingCodes.get(0)}"
            app:layout_constraintBaseline_toBaselineOf="@+id/code_appel_label"
            app:layout_constraintLeft_toLeftOf="@+id/guideline2"
            tools:text="33"/>

        <TextView
            android:id="@+id/capital_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/capital"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/code_appel_label"/>

        <TextView
            android:id="@+id/capital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@{country.capital}"
            android:textColor="@color/colorGreen"
            app:layout_constraintBaseline_toBaselineOf="@+id/capital_label"
            app:layout_constraintLeft_toLeftOf="@+id/guideline2"
            tools:text="Paris"/>

        <TextView
            android:id="@+id/population_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/population"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/capital_label"/>

        <TextView
            android:id="@+id/population"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@{country.population}"
            android:textColor="@color/colorGreen"
            app:layout_constraintBaseline_toBaselineOf="@+id/population_label"
            app:layout_constraintLeft_toLeftOf="@+id/guideline2"
            tools:text="56 600"/>

        <TextView
            android:id="@+id/aire_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/area"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/population_label"/>

        <TextView
            android:id="@+id/aire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@{country.area}"
            android:textColor="@color/colorRed"
            app:layout_constraintBaseline_toBaselineOf="@+id/aire_label"
            app:layout_constraintLeft_toLeftOf="@+id/guideline2"
            tools:text="56 600"/>

        <TextView
            android:id="@+id/region_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/region"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aire_label"/>

        <TextView
            android:id="@+id/region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@{country.region}"
            app:layout_constraintBaseline_toBaselineOf="@+id/region_label"
            app:layout_constraintLeft_toLeftOf="@+id/guideline2"
            tools:text="Europe"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            tools:layout_editor_absoluteX="192dp"
            tools:layout_editor_absoluteY="89dp"/>
      </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
  </android.support.constraint.ConstraintLayout>
</layout>

